1.0.0
 * Upgrade to JUnit 5 (CASSANDRA-18599)
 * Add support for TTL & Timestamps for bulk writes (CASSANDRA-18605)
 * Add circleci configuration yaml for Cassandra Analytics (CASSANDRA-18578)
 * Provide a SecretsProvider interface to abstract the secret provisioning (CASSANDRA-18545)
 * Add the .asf.yaml file (CASSANDRA-18548)